# MonteCarloMischief

./: CMakeLists.txt  DESCRIPTION  NAMESPACE  ReadMe.md  test_script.R
R/: .Rbuildignore  BarrierOptionPricing.R  Makevar  NAMESPACE  R.Rproj  RcppExports.R  RcppExports.cpp  portfolio_pricing.R  portfolio_pricing.cpp  portfolio_pricing.h
data/: simulation_results.csv
include/: MonteCarloSimulation.h  OptionPricing.h  Portfolio.h
man/: BarrierOptionPricing-package.Rd  monte_carlo_arithmetic_asian.Rd  monte_carlo_barrier_option.Rd
scripts/: .Rhistory  analysis.R
src/: BarrierOptionPricing.cpp  Makevars  Makevars.win  MonteCarloSimulation.cpp  OptionPricing.cpp  Portfolio.cpp  RcppExports.cpp  main.cpp  portfolio_pricing.cpp  portfolio_pricing.h
